fix line break in mediaquery

--- a/src/index.css
+++ b/src/index.css
@@ -56,10 +56,10 @@ padding-top: 25%
 }
 
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 600px) {
 
 	.content h1{
-		font-size: 30px;
+		font-size: 40px;
 		margin-bottom: 8px;
 	}
 
